<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.msgl.bound.FaceActivity">
    <!--左边滑动及放球的地方-->
    <TextView
        android:id="@+id/controller_left_view"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:background="@drawable/controller_background"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/sild"
        android:textColor="@color/colorSild"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/put_left_layout"
        android:layout_width="24dp"
        android:layout_height="match_parent"
        android:background="@drawable/put"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:id="@+id/left_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:text="@string/own"/>
            <Button
                android:id="@+id/left_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:text="@string/one"/>
            <Button
                android:id="@+id/left_button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:text="@string/two"/>
            <Button
                android:id="@+id/left_button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:text="@string/three"/>
            <Button
                android:id="@+id/left_button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:text="@string/four"/>
            <Button
                android:id="@+id/left_button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:text="@string/five"/>
        </LinearLayout>

    </LinearLayout>
    <!--game 区的地方-->
    <com.msgl.bound.ui.GameSurfaceView
        android:id="@+id/surface_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
    <!--右边滑动及放球的地方-->
    <LinearLayout
        android:id="@+id/put_right_layout"
        android:layout_width="24dp"
        android:layout_height="match_parent"
        android:background="@drawable/put"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:id="@+id/right_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:text="@string/right"/>
            <Button
                android:id="@+id/right_button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:text="@string/left"/>
            <Button
                android:id="@+id/right_button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:text="@string/expend"/>
            <Button
                android:id="@+id/right_button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:text="@string/impend"/>
            <Button
                android:id="@+id/right_button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:text="@string/stop"/>
            <Button
                android:id="@+id/right_button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:gravity="center"
                android:text="@string/go"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/controller_right_view"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:background="@drawable/controller_background"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/sild"
        android:textColor="@color/colorSild"
        android:textSize="20sp" />

</LinearLayout>